--- a/set_version.service
+++ b/set_version.service
@@ -19,5 +19,9 @@ Can be used after download_url or tar_scm service.
     <description>This regex can be used to autodetect the version from the source dir
 inside the source file or the source file directly.</description>
   </parameter>
+  <parameter name="skip-change-pkgrel">
+    <description>Skip the change of the pkgrel variable in PKGBUILD (only relevant for Arch builds).</description>
+    <allowedvalue>yes</allowedvalue>
+  </parameter>
 </service>
 
